chore: clean up

--- a/imports/ui/header.html
+++ b/imports/ui/header.html
@@ -16,7 +16,7 @@
             <div class="socials">
                 <a href="https://twitter.com/krebs_adrian" target="_blank"><i
                         class="fa fa-twitter"></i></a>
-                <a class="github" href="https://github.com/AdrianKrebs" target="_blank"><i
+                <a class="github" href="https://github.com/AdrianKrebs/gif-messenger" target="_blank"><i
                         class="fa fa-github"></i></a>
             </div>
         </div>
